prep firstName and lastName to person Domain
