# user/src/main/java/dev/shade/infrastructure/repository/user/UserJpaEntity.java
@@ -29,12 +29,6 @@ public class UserJpaEntity extends Auditable {
     @Column(name = "user_name", unique = true)
     private String userName;
 
-    @Column(name = "first_name")
-    private String firstName;
-
-    @Column(name = "last_name")
-    private String lastName;
-
     @Column(name = "email", unique = true)
     private String email;
 
