# user/src/main/resources/openapi/user_api.yaml
@@ -94,10 +94,6 @@ components:
       properties:
         userName:
           type: string
-        firstName:
-          type: string
-        lastName:
-          type: string
         email:
           type: string
 
@@ -108,10 +104,6 @@ components:
           type: string
           format: uuid
         userName:
-          type: string
-        firstName:
-          type: string
-        lastName:
           type: string
         email:
           type: string
